--- a/www/app/views/layout/side-menu.html
+++ b/www/app/views/layout/side-menu.html
@@ -1,20 +1,20 @@
 <ion-side-menus enable-menu-with-back-views="true">
   <ion-side-menu-content>
-    <ion-nav-bar class="bar nav-title-slide-ios7" align-title="left">
+    <ion-nav-bar class="bar nav-title-slide-ios7 blue darken-1" align-title="left">
       <ion-nav-back-button class="no-text">
       </ion-nav-back-button>
       <ion-nav-buttons side="left">
         <button class="button button-icon button-clear icon ion-navicon" menu-toggle="left"></button>
       </ion-nav-buttons>
-      <ion-nav-title class="white-text">
-        {NameOfApp}
+      <ion-nav-title class="white-text light-text">
+        CodeFam
       </ion-nav-title>
     </ion-nav-bar>
     <ion-nav-view name="content-index" animation="slide-left-right"></ion-nav-view>
   </ion-side-menu-content>
   <ion-side-menu side="left">
-    <header class="bar bar-header bar deep-purple">
-      <h1 class="title white-text">UserName</h1>
+    <header class="bar bar-header bar blue darken-1">
+      <h1 class="title white-text light-text">UserName</h1>
     </header>
     <ion-content class="stable-bg has-header">
       <ion-list>
