--- a/www/app/views/main/index.html
+++ b/www/app/views/main/index.html
@@ -1,4 +1,17 @@
 <ion-view>
 	<ion-content class="has-header gray-body">
+    <div class="card">
+	    <div class="card-image waves-effect waves-block waves-light">
+        <img class="activator" src="images/office.jpg">
+      </div>
+      <div class="card-content">
+        <span class="card-title activator grey-text text-darken-4">Card Titlemore_vert</i></span>
+        <p><a href="#">This is a link</a></p>
+      </div>
+      <div class="card-reveal">
+        <span class="card-title grey-text text-darken-4">Card Titleclose</i></span>
+        <p>Here is some more information about this product that is only revealed once clicked on.</p>
+      </div>
+    </div>
 	</ion-content>
 </ion-view>
