initial main layout

--- a/platforms/android/assets/www/app/views/layout/side-menu.html
+++ b/platforms/android/assets/www/app/views/layout/side-menu.html
@@ -9,7 +9,6 @@
       <ion-nav-title class="white-text">
         {Nome}
       </ion-nav-title>
-      
     </ion-nav-bar>
     <ion-nav-view name="content-index" animation="slide-left-right"></ion-nav-view>
   </ion-side-menu-content>
@@ -25,17 +24,9 @@
         </ion-item>
         <div class="border"></div>
         <ion-item nav-clear menu-close onclick="window.location.replace('#/home/explore');">
-          Explore
+          Comprovantes
         </ion-item>
         <div class="border"></div>
-              <!-- <ion-item nav-clear menu-close onclick="window.location.replace('#/home/challenges');">
-                Challenges
-              </ion-item>
-              <div class="border"></div>
-              <ion-item nav-clear menu-close onclick="window.location.replace('#/home/pipelines');">
-                Pipelines
-              </ion-item>
-              <div class="border"></div> -->
         <ion-item nav-clear menu-close onclick="window.location.replace('#/logout');">
           Log Out
         </ion-item>
@@ -44,8 +35,3 @@
     </ion-content>
   </ion-side-menu>
 </ion-side-menus>
-
-
-<!-- <div class="bar bar-footer">
-  <div class="footer-text title">Developed by Intuit</div>
-</div> -->
