--- a/www/app/views/layout/side-menu.html
+++ b/www/app/views/layout/side-menu.html
@@ -7,7 +7,7 @@
         <button class="button button-icon button-clear icon ion-navicon" menu-toggle="left"></button>
       </ion-nav-buttons>
       <ion-nav-title class="white-text light-text">
-        CodeFam
+        {NameOfApp}
       </ion-nav-title>
     </ion-nav-bar>
     <ion-nav-view name="content-index" animation="slide-left-right"></ion-nav-view>
