--- a/platforms/android/assets/www/app/views/main/index.html
+++ b/platforms/android/assets/www/app/views/main/index.html
@@ -1,8 +1,8 @@
-<ion-view class="grey lighten-3">
+<ion-view>
 	<ion-content class="has-header gray-body">
-    <div class="card waves-effect waves-block waves-light margin person-card centering">
+    <div class="card waves-effect waves-block waves-light activator">
       <div class="card-content">
-        <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right activator">more_vert</i></span>
+        <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
         <p><a href="#!">This is a link</a></p>
       </div>
       <div class="card-reveal" style="display: none; transform: translateY(0px);">
@@ -10,10 +10,5 @@
         <p>Here is some more information about this product that is only revealed once clicked on.</p>
       </div>
     </div>
-
-
-		<div class="bar bar-subheader sub-menu">
-		  <h1 class="title light-text">Filters</h1>
-		</div>
 	</ion-content>
 </ion-view>
