--- a/platforms/android/assets/www/app/views/users/login.html
+++ b/platforms/android/assets/www/app/views/users/login.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Login" align-title="left">
-  <ion-content class="deep-purple" style="background-size: cover;">
+  <ion-content class="" style="background-size: cover;">
     <div class="hero flat">
       <div class="content">
         <h2 class="login-title">{Name}</h2>
