--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,3 +1,23 @@
 .light-text{
   font-weight: 300 !important;
 }
+
+.margin{
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.person-card{
+  min-height: 300px;
+}
+
+.centering{
+  top: 40%;
+  transform: translateY(-50%);
+}
+
+.sub-menu{ 
+  position: absolute;
+  bottom: 5px;
+  top: auto;
+}
