--- a/www/css/style.css
+++ b/www/css/style.css
@@ -21,3 +21,32 @@
   bottom: 5px;
   top: auto;
 }
+
+.show-tab {
+  transform: translateY(-100%) !important;
+  display: block !important;
+}
+
+.show-tab.ng-hide-add {
+  transform: translateY(-100%) !important;
+  display: block !important;
+  transition: all 1s;
+}
+
+.show-tab.ng-hide-add-active {
+  transform: translateY(0%) !important;
+  display: block !important;
+  transition: all 1s;
+}
+
+.show-tab.ng-hide-remove {
+  transform: translateY(0%) !important;
+  display: block !important;
+  transition: all 1s;
+}
+
+.show-tab.ng-hide-remove-active {
+  transform: translateY(-100%) !important;
+  display: block !important;
+  transition: all 1s;
+}
