--- a/www/app/views/main/index.html
+++ b/www/app/views/main/index.html
@@ -2,11 +2,11 @@
 	<ion-content class="has-header gray-body">
     <div class="card margin person-card centering">
       <div class="card-content">
-        <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right" ng-click="see_more()">more_vert</i></span>
+        <span class="card-title grey-text text-darken-4">Card Title<i class="icon ion-ios-close right card-icon" ng-click="see_more()"></i></span>
         <p><a href="#!">This is a link</a></p>
       </div>
       <div class="card-reveal show-tab" ng-hide="clicked">
-        <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right" ng-click="see_more()">close</i></span>
+        <span class="card-title grey-text text-darken-4">Card Title<i class="icon ion-ios-plus material-icons right card-icon" ng-click="see_more()"></i></span>
         <p>Here is some more information about this product that is only revealed once clicked on.</p>
       </div>
     </div>
