--- a/platforms/android/assets/www/css/style.css
+++ b/platforms/android/assets/www/css/style.css
@@ -6,3 +6,70 @@
   margin-left: 20px;
   margin-right: 20px;
 }
+
+.person-card{
+  min-height: 300px;
+}
+
+.card-icon{
+  font-size: 40px;
+  position: absolute;
+  bottom: 10px;
+  right: 20px;
+}
+
+.centering{
+  top: 40%;
+  -ms-transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+
+.sub-menu{ 
+  position: absolute;
+  bottom: 5px;
+  top: auto;
+}
+
+.show-tab {
+  transform: translateY(-100%) !important;
+  -ms-transform: translateY(-100%) !important;
+  -webkit-transform: translateY(-100%) !important;
+  display: block !important;
+}
+
+.show-tab.ng-hide-add {
+  opacity: 1;
+  transform: translateY(-100%) !important;
+  -ms-transform: translateY(-100%) !important;
+  -webkit-transform: translateY(-100%) !important;
+  display: block !important;
+  transition: all 1s;
+}
+
+.show-tab.ng-hide-add-active {
+  opacity: 0;
+  transform: translateY(0%) !important;
+  -ms-transform: translateY(0%) !important;
+  -webkit-transform: translateY(0%) !important;
+  display: block !important;
+  transition: all 1s;
+}
+
+.show-tab.ng-hide-remove {
+  opacity: 0;
+  transform: translateY(0%) !important;
+  -ms-transform: translateY(0%) !important;
+  -webkit-transform: translateY(0%) !important;
+  display: block !important;
+  transition: all 1s;
+}
+
+.show-tab.ng-hide-remove-active {
+  opacity: 1;
+  transform: translateY(-100%) !important;
+  -ms-transform: translateY(-100%) !important;
+  -webkit-transform: translateY(-100%) !important;
+  display: block !important;
+  transition: all 1s;
+}
