--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,25 +1,18 @@
-.light-text{
+.nav-bar-title{
   font-weight: 300 !important;
 }
-
+.title{
+  font-weight: 300 !important;
+}
 .margin{
   margin-left: 20px;
   margin-right: 20px;
 }
 
-.person-card{
-  min-height: 300px;
-}
-
-.card-icon{
-  font-size: 40px;
-  position: absolute;
-  bottom: 10px;
-  right: 20px;
-}
-
 .centering{
   top: 40%;
+  -ms-transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
 }
 
@@ -31,12 +24,16 @@
 
 .show-tab {
   transform: translateY(-100%) !important;
+  -ms-transform: translateY(-100%) !important;
+  -webkit-transform: translateY(-100%) !important;
   display: block !important;
 }
 
 .show-tab.ng-hide-add {
   opacity: 1;
   transform: translateY(-100%) !important;
+  -ms-transform: translateY(-100%) !important;
+  -webkit-transform: translateY(-100%) !important;
   display: block !important;
   transition: all 1s;
 }
@@ -44,6 +41,8 @@
 .show-tab.ng-hide-add-active {
   opacity: 0;
   transform: translateY(0%) !important;
+  -ms-transform: translateY(0%) !important;
+  -webkit-transform: translateY(0%) !important;
   display: block !important;
   transition: all 1s;
 }
@@ -51,6 +50,8 @@
 .show-tab.ng-hide-remove {
   opacity: 0;
   transform: translateY(0%) !important;
+  -ms-transform: translateY(0%) !important;
+  -webkit-transform: translateY(0%) !important;
   display: block !important;
   transition: all 1s;
 }
@@ -58,6 +59,50 @@
 .show-tab.ng-hide-remove-active {
   opacity: 1;
   transform: translateY(-100%) !important;
+  -ms-transform: translateY(-100%) !important;
+  -webkit-transform: translateY(-100%) !important;
   display: block !important;
   transition: all 1s;
+}
+
+.person-card{
+  min-height: 300px;
+  transition: all 0.5s ease;
+  transform: translate(0%, -50%) !important;
+  -ms-transform: translate(0%, -50%) !important;
+  -webkit-transform: translate(0%, -50%) !important;
+}
+
+.person-card.ng-hide-add-active {
+  opacity: 0;
+  transform: translate(-100%, -50%) !important;
+  -ms-transform: translate(-100%, -50%) !important;
+  -webkit-transform: translate(-100%, -50%) !important;
+  display: block !important;
+  transition: all 0.5s;
+}
+
+.person-card.ng-hide-remove {
+  opacity: 1;
+  transform: translate(110%, -50%) !important;
+  -ms-transform: translate(110%, -50%) !important;
+  -webkit-transform: translate(110%, -50%) !important;
+  transition: all 0.3s;
+}
+
+
+.person-card.ng-hide-remove-active {
+  opacity: 1;
+  transform: translate(110%, -50%) !important;
+  -ms-transform: translate(110%, -50%) !important;
+  -webkit-transform: translate(110%, -50%) !important;
+  transition: all 0.3s;
+}
+
+
+.card-icon{
+  font-size: 40px;
+  position: absolute;
+  bottom: 10px;
+  right: 20px;
 }
