--- a/platforms/android/assets/www/app/views/main/index.html
+++ b/platforms/android/assets/www/app/views/main/index.html
@@ -1,12 +1,12 @@
 <ion-view class="grey lighten-3">
-	<ion-content class="has-header gray-body">
-    <div class="card margin person-card centering" on-swipe-left="get_next()">
+	<ion-content class="has-header gray-body" on-swipe-left="get_next()">
+    <div class="card margin person-card centering" ng-repeat="person in persons" ng-show="$index == index">
       <div class="card-content">
-        <span class="card-title grey-text text-darken-4">Card Title<i class="icon ion-ios-close right card-icon" ng-click="see_more()"></i></span>
+        <span class="card-title grey-text text-darken-4">{{person.user}}<i class="icon ion-ios-close right card-icon" ng-click="see_more()"></i></span>
         <p><a href="#!">This is a link</a></p>
       </div>
       <div class="card-reveal show-tab" ng-hide="clicked">
-        <span class="card-title grey-text text-darken-4">Card Title<i class="icon ion-ios-plus material-icons right card-icon" ng-click="see_more()"></i></span>
+        <span class="card-title grey-text text-darken-4">{{person.user}}<i class="icon ion-ios-plus material-icons right card-icon" ng-click="see_more()"></i></span>
         <p>Here is some more information about this product that is only revealed once clicked on.</p>
       </div>
     </div>
